tests/ui/proc-macro/issue-79148.stderr
error[E0364]: `Variant` is only public within the crate, and cannot be re-exported outside
  --> $DIR/issue-79148.rs:8:1
   |
LL | cause_ice!();
   | ^^^^^^^^^^^^ in this macro invocation
   |
  ::: $DIR/auxiliary/re-export.rs:11:1
   |
LL | pub fn cause_ice(_: TokenStream) -> TokenStream {
   | ----------------------------------------------- in this expansion of `cause_ice!`
   |
note: consider marking `Variant` as `pub` in the imported module
  --> $DIR/issue-79148.rs:8:1
   |
LL | cause_ice!();
   | ^^^^^^^^^^^^ in this macro invocation
   |
  ::: $DIR/auxiliary/re-export.rs:11:1
   |
LL | pub fn cause_ice(_: TokenStream) -> TokenStream {
   | ----------------------------------------------- in this expansion of `cause_ice!`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0364`.
